--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no"
     />
+    <meta name="theme-color" content="#000" />
     <title>Vite + React + TS</title>
   </head>
   <body>
